tests/errors/cpp/define-conflicting-duplicate.bi
#define EXPANDME1 a
#define EXPANDME1_ b
